--- a/package.json
+++ b/package.json
@@ -22,8 +22,11 @@
     "angular-6-social-login": "^1.1.1",
     "angularx-social-login": "^2.3.1",
     "bootstrap": "^3.4.1",
+    "chart.js": "^2.9.3",
     "cors": "^2.8.5",
     "googleapis": "^51.0.0",
+    "jquery": "^3.5.1",
+    "popper.js": "^1.16.1",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
