--- a/angular.json
+++ b/angular.json
@@ -25,7 +25,7 @@
             ],
             "styles": [
               "node_modules/bootstrap/dist/css/bootstrap.min.css",
-              "src/styles.css"
+              "src/styles.scss"
             ],
             "scripts": []
           },
@@ -125,5 +125,10 @@
   "defaultProject": "business-visitore-register",
   "cli": {
     "analytics": "51706c36-92bd-49a3-a956-1851dc2544f9"
+  },
+  "schematics": {
+    "@schematics/angular:component": {
+      "styleext": "scss"
+    }
   }
 }
