--- a/package.json
+++ b/package.json
@@ -19,16 +19,23 @@
     "@angular/platform-browser": "~9.0.7",
     "@angular/platform-browser-dynamic": "~9.0.7",
     "@angular/router": "~9.0.7",
+    "@types/hammerjs": "^2.0.36",
+    "@types/jszip": "^3.1.7",
     "angular-6-social-login": "^1.1.1",
     "angularx-social-login": "^2.3.1",
     "bootstrap": "^3.4.1",
     "chart.js": "^2.9.3",
     "cors": "^2.8.5",
     "googleapis": "^51.0.0",
+    "hammerjs": "^2.0.8",
+    "igniteui-angular": "^9.0.15",
     "jquery": "^3.5.1",
+    "jszip": "^3.3.0",
     "popper.js": "^1.16.1",
+    "resize-observer-polyfill": "^1.5.1",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
+    "web-animations-js": "^2.3.2",
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
@@ -36,6 +43,7 @@
     "@angular/cli": "~9.0.7",
     "@angular/compiler-cli": "~9.0.7",
     "@angular/language-service": "~9.0.7",
+    "@igniteui/angular-schematics": "~9.0.500",
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "^12.11.1",
