--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "bootstrap": "^3.4.1",
     "chart.js": "^2.9.3",
     "cors": "^2.8.5",
+    "express-sse": "^0.5.3",
     "googleapis": "^51.0.0",
     "hammerjs": "^2.0.8",
     "igniteui-angular": "^9.0.15",
