--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "hammerjs": "^2.0.8",
     "igniteui-angular": "^9.0.15",
     "jquery": "^3.5.1",
+    "jsonwebtoken": "^8.5.1",
     "jszip": "^3.3.0",
     "popper.js": "^1.16.1",
     "resize-observer-polyfill": "^1.5.1",
